@@ -27,6 +27,7 @@
 
 #include <stdio.h>
 #include <stdlib.h>
+#include <stdbool.h>
 #include <string.h>
 #include <ctype.h>
 
@@ -116,6 +117,7 @@ usage (void)
            "  -ys            Super GameBoy\n"
            "  -yS            Convert .noi file named like input file to .sym\n"
            "  -yj            set non-Japanese region flag\n"
+           "  -yN            do not copy big N validation logo into ROM header\n"
            "  -yp addr=value Set address in ROM to given value (address 0x100-0x1FE)\n"
            "Arguments:\n"
            "  <in_file>      optional IHX input file, '-' means stdin. (default: stdin)\n"
@@ -137,6 +139,7 @@ struct gb_opt_s
   BYTE sym_conversion;            /* True if .noi file should be converted to .sym (default false)*/
   BYTE non_jp;                    /* True if non-Japanese region, false for all other*/
   BYTE rom_banks_autosize;        /* True if rom banks should be auto-sized (default false)*/
+  bool do_logo_copy;              /* True if the nintendo logo should be copied into the ROM (default true) */
   BYTE address_overwrite[16];     /* For limited compatibility with very old versions */
 };
 
@@ -165,7 +168,10 @@ gb_postproc (BYTE * rom, int size, int *real_size, struct gb_opt_s *o)
    * If missing, an actual Game Boy won't run the ROM.
    */
 
-  memcpy (&rom[0x104], gb_logo, sizeof (gb_logo));
+  if (o->do_logo_copy)
+    {
+      memcpy (&rom[0x104], gb_logo, sizeof (gb_logo));
+    }
 
   rom[0x144] = o->licensee_str[0];
   rom[0x145] = o->licensee_str[1];
@@ -689,8 +695,24 @@ main (int argc, char **argv)
   int ret;
   int gb = 0;
   int sms = 0;
-  struct gb_opt_s gb_opt = { "", {'0', '0'}, 0, 2, 0, 0x33, 0, 0, 0, 0, 0, {0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0}};
-  struct sms_opt_s sms_opt = { 0xa, 7, 0 };
+
+  struct gb_opt_s gb_opt = {.cart_name="",
+                            .licensee_str={'0', '0'},
+                            .mbc_type=0,
+                            .nb_rom_banks=2,
+                            .nb_ram_banks=0,
+                            .licensee_id=0x33,
+                            .is_gbc=0,
+                            .is_sgb=0,
+                            .sym_conversion=0,
+                            .non_jp=0,
+                            .rom_banks_autosize=0,
+                            .do_logo_copy=true,
+                            .address_overwrite={0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0} };
+
+  struct sms_opt_s sms_opt = {.rom_size=0xa,
+                              .region_code=7,
+                              .version=0 };
 
 #if defined(_WIN32)
   setmode (fileno (stdout), O_BINARY);
@@ -799,6 +821,10 @@ main (int argc, char **argv)
 
             case 'C':
               gb_opt.is_gbc = 2;
+              break;
+
+            case 'N':
+              gb_opt.do_logo_copy = false; // when switch is present, turn off logo copy
               break;
 
             case 's':
