@@ -1,3 +1,8 @@
+2021-10-29 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/makebin/makebin.c:
+	  Option for logo omission, patch #395 by bbbbbr.
+
 2021-10-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
